--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;800&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="assets/images/bell.png" type="image/png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="" />
@@ -27,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Notifications</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
